--- a/cmd/dashboard/templates/index.gohtml
+++ b/cmd/dashboard/templates/index.gohtml
@@ -23,20 +23,12 @@
 			<div class="container-fluid" style="background: url('https://i.imgur.com/OBhO8ds.png') no-repeat right center;margin-right: 12px;">
 				<a class="navbar-brand text-light" href="#">Mister - Distributed MapReduce Framework</a>
 				<div class="collapse navbar-collapse"></div>
-				<small style="margin:auto 45px auto auto;color:white;font-weight:bold">v0.0.1</small>
+				<small style="margin:auto 45px auto auto;color:white;font-weight:bold">v0.0.3</small>
 			</div>
 		</nav>
 		<div class="container">
 			<h1>Welcome!</h1>
-			<h4>Here are the pods:</h4>
-			<ul class="list-group">
-				{{ range .Items }}
-					<li class="list-group-item">
-						{{ .Name }} -
-						{{ index .Annotations "mr-queue" }}
-					</li>
-				{{ end }}
-			</ul>
+			<h4>Here is the cluster:</h4>
 			<div id="visualiser" style=" width: 100%; height: 800px; border: 1px solid lightgray;"></div>
 		</div>
 		<script
@@ -64,8 +56,8 @@
 				data.forEach((task) => workers.add(task.Worker));
 				workers = Array.from(workers);
 				let dataset = [{ id: "coordinator", label: "COORDINATOR", shape: "box", x: 400, y: 10 }];
-				data.forEach((task, i) => dataset.push({ id: task.InputFile, label: task.InputFile, shape: "box", x: 0, y: 50 + i * 50 }));
-				workers.forEach((worker, i) => dataset.push({ id: worker, label: worker, x: 250, y: 200 + i * 100 }));
+				data.forEach((task, i) => dataset.push({ id: task.InputFile, label: task.InputFile, shape: "box", x: 0 }));
+				workers.forEach((worker, i) => dataset.push({ id: worker, label: worker, x: 250 }));
 				var nodes = new vis.DataSet(dataset);
 				dataset = [];
 				workers.forEach((worker) => dataset.push({ from: "coordinator", to: worker }));
