--- a/cmd/dashboard/templates/index.gohtml
+++ b/cmd/dashboard/templates/index.gohtml
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<style>
 			.terminal {
-				color: #009600;
+				color: #00eb00;
 				background: black;
 				font-family: monospace;
 			}
