--- a/cmd/dashboard/templates/index.gohtml
+++ b/cmd/dashboard/templates/index.gohtml
@@ -72,12 +72,12 @@
 			<div class="container-fluid">
 				<a class="navbar-brand text-light" href="#">Mister - Distributed MapReduce Framework</a>
 				<div class="collapse navbar-collapse"></div>
-				<small class="version">v0.0.7</small>
+				<small class="version">v0.1.0</small>
 			</div>
 		</nav>
 		<div class="container">
 			<form>
-				<fieldset disabled class="row mb-3 m-0">
+				<fieldset class="row mb-3 m-0">
 					<div class="input-group col">
 						<label class="input-group-text" for="inputGroupSelect01">App:</label>
 						<select class="form-select" id="inputGroupSelect01" name="app">
